# system-monitor

./: .eslintrc.js  LICENSE  README.md  index.html  package.json  unocss.config.js  vite.config.js
src/: app.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  system_tray.rs  window.rs
src/assets/: index.css
src/contexts/: resolver.jsx  sysdata copy.jsx  sysdata.jsx  theme.jsx
src/data-resolvers/: base.js  index.js  libhm.js  msiafterburner.js  utils.js
src/eles/: bar.jsx  comps.jsx  cores.jsx  cpu-detail.jsx  cpu.jsx  gpu.jsx  gpudetail.jsx  index.jsx  settings.jsx
src/eles/charts/: bullet.jsx  line.jsx  radial.jsx
src/eles/cpu-detail/: clock.jsx  fps.jsx  index.jsx  memory.jsx  partials.jsx  power.jsx  temperature.jsx  voltage.jsx
src/eles/settings/: datasource.jsx  index.jsx
src/store/: settings.js  sysdata.js  theme.js
src/themes/: dark.jsx  default.jsx  light.jsx
