[package]
name = "tauri-app"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-all", "http-api", "http-request", "process-exit", "process-relaunch", "shell-open", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.28.4"
serde_json = "1.0"
rev_buf_reader = "0.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
